--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "TOKEN": "",
-    "ID": "",
-    "HASH": "",
+    "TOKEN": "5484278199:AAFjO7Hy6KEruxdA4gir1kMA-eJpy7OSMbc",
+    "ID": "4682685",
+    "HASH": "3eba5d471162181b8a3f7f5c0a23c307",
     "STREAM": "https://iptvstream.onrender.com/"
 }
